--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/DanglingPointer/stunny"
 license = "Apache-2.0"
 
 [dependencies]
+rand = "0.8.5"
 bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
 bytes = "1.9.0"
 log = "0.4.22"
