--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
 bytes = "1.9.0"
 log = "0.4.22"
 thiserror = "2.0.3"
+derive_more = { version = "1.0.0", features = ["debug"] }
 tokio = { version = "1.42.0", default-features = false, features = [
     "net",
     "sync",
