--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tokio = { version = "1.42.0", default-features = false, features = [
 [dev-dependencies]
 simple_logger = { version = "5.0.0" }
 tokio-test = "0.4.4"
+futures = "0.3.31"
 local_async_utils = { git = "https://github.com/DanglingPointer/local_async_utils.git", tag = "v0.1.0", features = [
     "tokio-time",
 ] }
