--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,46 +1,11 @@
-[package]
-name = "stunny"
-version = "0.1.0"
-edition = "2021"
-authors = ["Mikhail Vasilyev"]
-description = "STUN implementation in Rust"
-repository = "https://github.com/DanglingPointer/stunny"
-license = "Apache-2.0"
-
-[features]
-default = ["udp", "tcp"]
-udp = []
-tcp = []
-tls = ["dep:tokio-rustls"]
-
-[dependencies]
-rand = "0.8.5"
-bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
-bytes = "1.9.0"
-log = "0.4.22"
-thiserror = "2.0.5"
-derive_more = { version = "1.0.0", features = ["debug"] }
-futures-util = { version = "0.3.31", default-features = false }
-tokio = { version = "1.42.0", default-features = false, features = [
-    "net",
-    "sync",
-    "io-util",
-    "macros",
-    "rt",
-    "time",
-] }
-tokio-rustls = { version = "0.26.1", default-features = false, optional = true, features = [
-    "tls12",
-    "aws_lc_rs",
-] }
-
-[dev-dependencies]
-simple_logger = { version = "5.0.0" }
-tokio-test = "0.4.4"
-futures = "0.3.31"
-local_async_utils = { git = "https://github.com/DanglingPointer/local_async_utils.git", tag = "v0.1.0", features = [
-    "tokio-time",
-] }
+[workspace]
+members = ["stunny-core", "stunny-client"]
+resolver = "2"
 
 [profile.dev]
 opt-level = 3
+
+[workspace.dependencies]
+log = "0.4.22"
+thiserror = "2.0.5"
+derive_more = { version = "1.0.0" }
