--- a/stunny-client/Cargo.toml
+++ b/stunny-client/Cargo.toml
@@ -7,6 +7,12 @@ description = "STUN client functionality"
 repository = "https://github.com/DanglingPointer/stunny"
 license = "Apache-2.0"
 
+[features]
+default = []
+udp = ["stunny-core/udp"]
+tcp = ["stunny-core/tcp"]
+tls = ["stunny-core/tls"]
+
 [dependencies]
 log = { workspace = true }
 thiserror = { workspace = true }
@@ -23,7 +29,4 @@ tokio = { version = "1.42.0", default-features = false, features = [
 simple_logger = { version = "5.0.0" }
 tokio-test = "0.4.4"
 futures = "0.3.31"
-local_async_utils = { git = "https://github.com/DanglingPointer/local_async_utils.git", tag = "v0.1.0", features = [
-    "tokio-time",
-] }
-stunny-core = { path = "../stunny-core", default-features = true }
+local_async_utils = { workspace = true }
