--- a/stunny-server/Cargo.toml
+++ b/stunny-server/Cargo.toml
@@ -26,3 +26,4 @@ async-trait = "0.1.83"
 [dev-dependencies]
 simple_logger = { workspace = true }
 tokio-test = { workspace = true }
+tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
